Adding typeReached conditional for reflection